<?xml version="1.0"?>
<package format="2">
  <name>handsfree_rtk</name>
  <version>1.0.0</version>
  <description>UM982 RTK</description>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
</package>