<?xml version="1.0"?>
<package format="2">
  <name>lawnwomer</name>
  <version>1.0.0</version>
  <description>Lawnwomer Autonomous Mower</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>robot_localization</depend>
</package>